--- a/mdx-with-nextjs/tsconfig.json
+++ b/mdx-with-nextjs/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "types/mdx.d.ts"],
   "exclude": ["node_modules"]
 }
