--- a/mdx-with-nextjs/package.json
+++ b/mdx-with-nextjs/package.json
@@ -4,34 +4,28 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "cp -R contents/image public && next build",
     "start": "next start",
     "lint": "tsc && next lint"
   },
   "dependencies": {
+    "next": "12.1.5",
+    "react": "18.0.0",
+    "react-dom": "18.0.0"
+  },
+  "devDependencies": {
     "@mdx-js/loader": "^2.1.1",
     "@mdx-js/runtime": "^1.6.22",
     "@next/mdx": "^12.1.5",
-    "fs": "^0.0.1-security",
-    "globby": "^13.1.1",
-    "gray-matter": "^4.0.3",
-    "next": "12.1.5",
-    "next-compose-plugins": "^2.2.1",
-    "next-images": "^1.8.4",
-    "next-optimized-images": "^2.6.2",
-    "prism-react-renderer": "^1.3.1",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "remark-emoji": "^3.0.2",
-    "remark-images": "^3.1.0"
-  },
-  "devDependencies": {
     "@types/mdx": "^2.0.1",
     "@types/node": "17.0.24",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
+    "globby": "^13.1.1",
+    "gray-matter": "^4.0.3",
+    "prism-react-renderer": "^1.3.1",
     "typescript": "4.6.3"
   }
 }
